--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 		<module>02-thirdbean</module>
 		<module>03-conditional</module>
 		<module>04-conditionalon</module>
+		<module>05-reocketmq</module>
 	</modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
