--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,9 @@
 		<module>05-reocketmq</module>
         <module>06-apollo</module>
         <module>07-validation</module>
-    </modules>
-    <parent>
+		<module>08-exception</module>
+	</modules>
+	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.6.BUILD-SNAPSHOT</version>
@@ -26,6 +27,11 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<hutool.version>4.5.7</hutool.version>
+		<!--mybatisPlus-->
+		<mybatis.plus.start>3.5.1</mybatis.plus.start>
+		<!--<mybatis.plus>2.1.4</mybatis.plus>-->
+		<druid>1.1.20</druid>
 	</properties>
 
 	<dependencies>
@@ -52,6 +58,13 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>1.2.47</version>
+		</dependency>
+
+		<!--hutool-->
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-all</artifactId>
+			<version>${hutool.version}</version>
 		</dependency>
 	</dependencies>
 
