springBoot过滤器去除请求参数前后空格

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
 		<module>08-exception</module>
         <module>09-screw</module>
         <module>10-mybatis-plus</module>
-    </modules>
+		<module>11-trim-paramter-filter</module>
+	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
