--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,10 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.6.BUILD-SNAPSHOT</version>
+		<version>2.3.12.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>com.jincou</groupId>
 	<artifactId>spring-boot-parent</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -71,14 +72,7 @@
 		</dependency>
 	</dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+
 
 	<repositories>
 		<repository>
