--- a/07-validation/pom.xml
+++ b/07-validation/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>spring-plugin-core</artifactId>
             <version>2.0.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.0.1.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
